Update version to 1.0.2

--- a/Logging Common/Logging Common.csproj
+++ b/Logging Common/Logging Common.csproj
@@ -9,6 +9,8 @@
     <Authors>David Smith</Authors>
     <Company>Washable Software</Company>
     <Product>Common Logging Framework</Product>
+    <AssemblyVersion>1.0.2</AssemblyVersion>
+    <FileVersion>1.0.2</FileVersion>
   </PropertyGroup>
 
 </Project>
