--- a/Logging Common/Logging Common.csproj
+++ b/Logging Common/Logging Common.csproj
@@ -9,8 +9,9 @@
     <Authors>David Smith</Authors>
     <Company>Washable Software</Company>
     <Product>Common Logging Framework</Product>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2</FileVersion>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3</FileVersion>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
 </Project>
