--- a/NLog Framework/NLog Framework.csproj
+++ b/NLog Framework/NLog Framework.csproj
@@ -9,13 +9,17 @@
     <Company>Washable Software</Company>
     <Product>Common Logging Framework</Product>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2</FileVersion>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3</FileVersion>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.6.2" />
-    <PackageReference Include="Washable.Logging.Common" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Logging Common\Logging Common.csproj" />
   </ItemGroup>
 
 </Project>
