--- a/NLog Ninject Bindings/NLog Ninject Bindings.csproj
+++ b/NLog Ninject Bindings/NLog Ninject Bindings.csproj
@@ -9,14 +9,18 @@
     <Company>Washable Software</Company>
     <Product>Common Logging Framework</Product>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2</FileVersion>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3</FileVersion>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Ninject" Version="3.3.4" />
-    <PackageReference Include="Washable.Logging.Common" Version="1.0.2" />
-    <PackageReference Include="Washable.Logging.Common.NLogFramework" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Logging Common\Logging Common.csproj" />
+    <ProjectReference Include="..\NLog Framework\NLog Framework.csproj" />
   </ItemGroup>
 
 </Project>
