--- a/Logging Common/Logging Common.csproj
+++ b/Logging Common/Logging Common.csproj
@@ -12,6 +12,12 @@
     <AssemblyVersion>1.0.3</AssemblyVersion>
     <FileVersion>1.0.3</FileVersion>
     <Version>1.0.3</Version>
+    <RepositoryUrl>https://github.com/davidsmithmke/Common-Logging-Framework.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/davidsmithmke/Common-Logging-Framework</PackageProjectUrl>
+    <Copyright>Copyright © 2019 by David Smith</Copyright>
+    <Description>Simple, extensible logging framework.  Allows for easy injection of logging dependencies while avoid close coupling with logging frameworks.</Description>
   </PropertyGroup>
 
 </Project>
